prax-codegen/tests/ui/count_select_value_not_true_fail.stderr
error: value for `_count.email` must be `true` (only opt-in is supported)
 --> tests/ui/count_select_value_not_true_fail.rs:7:19
  |
7 |         select: { email: 5 },
  |                   ^^^^^
